# uflash

./: .gitignore  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  micropython.hex  pyproject.toml  requirements.txt  ruff.toml  setup.py  tox.ini  uflash.py
.github/workflows/: test.yml  update_microbit_live_runtime.yml
docs/: conf.py  index.rst
tests/: example.py  test_lib.py  test_main.py  test_uextract.py  test_uflash.py
uflash/: RT_LIVE_VERINFO  __init__.py  __init__.pyi  lib.py  lib.pyi  main.py  micropython-microbit-v2-live.hex  uextract.py  uflash.py
