[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uflash"
dynamic = ["version"]
description = "A module and utility to flash Python onto the BBC micro:bit."
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Blackteahamburger", email = "blackteahamburger@outlook.com" },
]
requires-python = ">=3.9"
dependencies = ["nudatus>=0.0.2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Embedded Systems",
]

[project.urls]
Homepage = "https://github.com/blackteahamburger/uflash"

[project.scripts]
uflash = "uflash.uflash:main"
py2hex = "uflash.uflash:py2hex"

[tool.setuptools.dynamic]
version = { attr = "uflash.uflash._VERSION" }
