[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=77.0.3"]

[project]
    authors = [
        { name = "Blackteahamburger", email = "blackteahamburger@outlook.com" },
        { name = "Matt Wheeler", email = "m@funkyhat.org" },
        { name = "Nicholas H.Tollervey", email = "ntoll@ntoll.org" },
        { name = "Scott Webster", email = "ScottDWebsterNJ@gmail.com" },
        { name = "Tom Gurion", email = "nagasaki45@gmail.com" },
        { name = "Tom Viner", email = "uflash@viner.tv" },
    ]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Education",
        "Topic :: Software Development :: Embedded Systems",
    ]
    dependencies = ["nudatus>=0.0.2"]
    description = "A module and utility to flash Python onto the BBC micro:bit."
    license = "MIT"
    license-files = ["AUTHORS", "LICENSE"]
    maintainers = [
        { name = "Blackteahamburger", email = "blackteahamburger@outlook.com" },
    ]
    name = "uflash3"
    readme = "README.rst"
    requires-python = ">=3.10"
    version = "3.0.0"

    [project.optional-dependencies]
        dev = ["coverage", "pytest-cov", "pytest>=5", "ruff", "sphinx"]

    [project.urls]
        Homepage = "https://github.com/blackteahamburger/uflash"

    [project.scripts]
        uflash = "uflash.main:main"
